Upgraded user-manager, added basic support for subscriptions and userContacts
