# user-manager/user-manager-rest-api/src/modules/userContacts/entity.ts
@@ -1,0 +1,14 @@
+import { ThirdPartyContactService } from '../../common/ThirdPartyContactService';
+
+export interface CreateUserContactURLParams {
+  userEmail: string;
+  contactService: ThirdPartyContactService;
+}
+
+export interface CreateUserContact extends CreateUserContactURLParams {
+  contactRef: string;
+}
+
+export interface UserContact extends CreateUserContact {
+  userContactId?: string;
+}
